[DL] Finish notes [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/DL/06_cloud_services.html
+++ b/src/Notes/DataScience/Master/2C_2C/DL/06_cloud_services.html
@@ -160,6 +160,10 @@ Servicios
 <p>
 <img src="https://albamr09.github.io/public/assets/aws_architecture.png" alt="AWS's Architecture" style="height:300px;">
 </p>
+
+<p>
+<a href="https://www.youtube.com/watch?v=mDNhBLpT8Xg">How to use Amazon SageMaker</a>
+</p>
 </div>
   
 
