[MBJ] T3: finish notes on section 04 [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
@@ -81,6 +81,9 @@ Evaluación y Comparación de Modelos
 </li><li>
 <a href="T3/03_model_comparison_based_on_predictive_performance.html">Model Comparison Based on Predictive Performance</a>
 
+</li><li>
+<a href="T3/04_model_comparison_using_bayes_factors.html">Model Comparison Using Bayes Factors</a>
+
 </li></ol>
 </li></ol>
 <div id="Modelos Bayesianos Jerárquicos-Appendix"><h2 id="Appendix" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix">Appendix</a></h2></div>
