--- a/src/Notes/WebDev/Docker/index.html
+++ b/src/Notes/WebDev/Docker/index.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
-    <title>index</title>
+    <title>Docker</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
