[AAII] Fix typos [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/AAII/T4/03_evaluation_metrics.html
+++ b/src/Notes/DataScience/Master/2C_2C/AAII/T4/03_evaluation_metrics.html
@@ -301,7 +301,7 @@ The cophenetic correlation coefficient is a value in the interval \([−1, 1]\).
 <div id="Evaluation Metrics-Internal Validation-Hierarchical Methods-Hubert Statistic"><h4 id="Hubert Statistic" class="header"><a href="#Evaluation Metrics-Internal Validation-Hierarchical Methods-Hubert Statistic">Hubert Statistic</a></h4></div>
 
 <p>
-First, concordance are discordance are defined for pairs of examples. A pair \((i, j)\) is concordant when \(((v_{p_i} &lt; v_{c_i}) &amp; (v_{p_j} &lt; v_{c_j}))\) or \(((v_{p_i} &gt; v_{c_i}) &amp; (v_{p_j} &gt; v_{c_j}))\). And it is said to be discordant when \(((v_{p_i} &lt; v_{c_i}) &amp; (v_{p_j} &gt; v_{c_j}))\) or \(((v_{p_i} &gt; v_{c_i}) &amp; (v_{p_j} &lt; v_{c_j}))\). Therefore, a pair is neither concordant nor discordant if \(v_{p_i} = v_{c_i}\) or \(v_{p_j} = v_{c_j}\).
+First, concordance are discordance are defined for pairs of examples. A pair \((i, j)\) is concordant when \(((v_{p_i} &lt; v_{c_i}) \&amp; (v_{p_j} &lt; v_{c_j}))\) or \(((v_{p_i} &gt; v_{c_i}) \&amp; (v_{p_j} &gt; v_{c_j}))\). And it is said to be discordant when \(((v_{p_i} &lt; v_{c_i}) \&amp; (v_{p_j} &gt; v_{c_j}))\) or \(((v_{p_i} &gt; v_{c_i}) \&amp; (v_{p_j} &lt; v_{c_j}))\). Therefore, a pair is neither concordant nor discordant if \(v_{p_i} = v_{c_i}\) or \(v_{p_j} = v_{c_j}\).
 </p>
 
 <p>
