[AAII] Fix typos [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/AAII/T4/02_cluster_analysis.html
+++ b/src/Notes/DataScience/Master/2C_2C/AAII/T4/02_cluster_analysis.html
@@ -385,7 +385,7 @@ Agglomerative clustering starts with each observation as its own cluster. Then, 
 </p>
 
 \begin{align}
-d_{SL}(G, H) = \min_{i \in G, h' \in H} d_{ii'}
+d_{SL}(G, H) = \min_{i \in G, i' \in H} d_{ii'}
 \end{align}
 
 <p>
@@ -393,7 +393,7 @@ d_{SL}(G, H) = \min_{i \in G, h' \in H} d_{ii'}
 </p>
 
 \begin{align}
-d_{CL}(G, H) = \max_{i \in G, h' \in H} d_{ii'}
+d_{CL}(G, H) = \max_{i \in G, i' \in H} d_{ii'}
 \end{align}
 
 <p>
