--- a/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
@@ -85,6 +85,17 @@ Evaluación y Comparación de Modelos
 <a href="T3/04_model_comparison_using_bayes_factors.html">Model Comparison Using Bayes Factors</a>
 
 </li></ol>
+</li><li>
+Aspectos Computacionales de la Inferencia Bayesiana
+
+<ol>
+<li>
+<a href="T4/01_gibbs_sampler.html">Gibbs Sampler</a>
+
+</li><li>
+<a href="T4/02_metropolist_algorithm.html">Metropolis and Metropolis-Hastings Algorithms</a>
+
+</li></ol>
 </li></ol>
 <div id="Modelos Bayesianos Jerárquicos-Appendix"><h2 id="Appendix" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix">Appendix</a></h2></div>
 
