[AAII] T4: fix typo [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/AAII/T4/03_evaluation_metrics.html
+++ b/src/Notes/DataScience/Master/2C_2C/AAII/T4/03_evaluation_metrics.html
@@ -61,7 +61,7 @@ Given the above three axioms, Kleinberg proves the following theorem: For every 
 
 <ul>
 <li>
-\(k\)-clsuter stopping condition:  Stop merging clusters when we have \(k\) clusters (violates the richness axiom).
+\(k\)-cluster stopping condition:  Stop merging clusters when we have \(k\) clusters (violates the richness axiom).
 
 </li><li>
 Distance \(r\) stopping condition: Stop merging clusters when the nearest pair of clusters are farther than \(r \) (violates scale invariance).
