[MBJ] T4: finish section 02 start section 03 [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T4/01_gibbs_sampler.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T4/01_gibbs_sampler.html
@@ -101,7 +101,7 @@ Here, we illustrate the workings of the Gibbs sampler with a simple example.
 <div id="Gibbs Sampler-Gibbs Sampler-Example: Bivariate Normal Distribution"><h3 id="Example: Bivariate Normal Distribution" class="header"><a href="#Gibbs Sampler-Gibbs Sampler-Example: Bivariate Normal Distribution">Example: Bivariate Normal Distribution</a></h3></div>
 
 <p>
-Consider a single observation \((y_1, y_2)\) from a bivariate normally distributed population with unknown mean \(\theta = (\theta_1, \theta_2)\) and known covariance matrix \(\being{bmatrix}1 &amp; \rho \\ \rho &amp; 1\end{bmatrix}\). With a uniform prior distribution on \(\theta\), the posterior distribution is:
+Consider a single observation \((y_1, y_2)\) from a bivariate normally distributed population with unknown mean \(\theta = (\theta_1, \theta_2)\) and known covariance matrix \(\begin{bmatrix}1 &amp; \rho \\ \rho &amp; 1\end{bmatrix}\). With a uniform prior distribution on \(\theta\), the posterior distribution is:
 </p>
 
 \begin{align}
