--- a/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
@@ -95,6 +95,9 @@ Aspectos Computacionales de la Inferencia Bayesiana
 </li><li>
 <a href="T4/02_metropolist_algorithm.html">Metropolis and Metropolis-Hastings Algorithms</a>
 
+</li><li>
+<a href="T4/03_using_gibbs_and_metropolis.html">Using Gibbs and Metropolis as Buliding Blocks</a>
+
 </li></ol>
 </li></ol>
 <div id="Modelos Bayesianos Jerárquicos-Appendix"><h2 id="Appendix" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix">Appendix</a></h2></div>
