--- a/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/index.html
@@ -101,6 +101,9 @@ Aspectos Computacionales de la Inferencia Bayesiana
 </li><li>
 <a href="T4/04_inference_and_assesing_convergence.html">Inference and Assessing Convergence</a>
 
+</li><li>
+<a href="T4/05_effective_number_of_simulations.html">Effective Number of Simulation Draws</a>
+
 </li></ol>
 </li></ol>
 <div id="Modelos Bayesianos Jerárquicos-Appendix"><h2 id="Appendix" class="header"><a href="#Modelos Bayesianos Jerárquicos-Appendix">Appendix</a></h2></div>
