--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T4/03_using_gibbs_and_metropolis.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T4/03_using_gibbs_and_metropolis.html
@@ -54,7 +54,7 @@ We first define iteration \(t\) to consist of a series of \(d\) steps, with step
 
 \begin{align}
 J_{j, t}^{\text{Gibbs}}(\theta^*|\theta^{t-1}) = \begin{cases}
-p(\theta_j^*|\theta_{-j}^{t-1}, y) &amp; \text{ if } \theta^{-j}^* = \theta_{-j}^{t-1} \\
+p(\theta_j^*|\theta_{-j}^{t-1}, y) &amp; \text{ if } \theta_{-j}^* = \theta_{-j}^{t-1} \\
 0 &amp; \text{ otherwise}
 \end{cases}
 \end{align}
