[MBJ] T4: correct typo [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T4/04_inference_and_assesing_convergence.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T4/04_inference_and_assesing_convergence.html
@@ -78,7 +78,7 @@ If the simulation efficiency is low, the algorithm may be altered.
 <div id="Inference and Assessing Convergence-Discarding Early iterations of the Simulation Runs"><h2 id="Discarding Early iterations of the Simulation Runs" class="header"><a href="#Inference and Assessing Convergence-Discarding Early iterations of the Simulation Runs">Discarding Early iterations of the Simulation Runs</a></h2></div>
 
 <p>
-To diminish the influence of the starting values, we discard the first half of each sequence and focus attention on the second half. So our inferences will be based on the assumption that the distributions of the simulated values \(theta_t\), for large enough \(t\), are close to the target distribution, \(p(\theta|y)\).
+To diminish the influence of the starting values, we discard the first half of each sequence and focus attention on the second half. So our inferences will be based on the assumption that the distributions of the simulated values \(\theta_t\), for large enough \(t\), are close to the target distribution, \(p(\theta|y)\).
 </p>
 
 <p>
