[MBJ] T4: fix typo [skip ci]

--- a/src/Notes/DataScience/Master/2C_2C/MBJ/T4/04_inference_and_assesing_convergence.html
+++ b/src/Notes/DataScience/Master/2C_2C/MBJ/T4/04_inference_and_assesing_convergence.html
@@ -223,7 +223,7 @@ After \(50\) iterations, the variance between the five sequences is much greater
 </p>
 
 <p>
-The comparison with the true target distribution shows how some variability remains in the posterior inferences even after the Markov chains have converged.º
+The comparison with the true target distribution shows how some variability remains in the posterior inferences even after the Markov chains have converged.
 </p>
 
 <p>
