[AGAA] 8.2: start adding notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -107,6 +107,9 @@ Trigonometric Functions and Applications.
 <li>
 <a href="08_01.html">Angles and Their Measures</a>
 
+</li><li>
+<a href="08_02.html">Trigonometric Functions and Fundamental Identities</a>
+
 </li></ol>
 </li></ol>
 </div>
