--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_02.html
@@ -116,6 +116,179 @@ If the terminal side of the quadrantal angle lies along the x-axis (\(y\) equals
 <p>
 <img src="https://albamr09.github.io/public/assets/trigonometric_equation_domains.png" alt="Trignonometric Functions Domain" style="height:250px">
 </p>
+
+<div id="Trigonometric Functions and Fundamental Identities-Reciprocal Identities"><h2 id="Reciprocal Identities" class="header"><a href="#Trigonometric Functions and Fundamental Identities-Reciprocal Identities">Reciprocal Identities</a></h2></div>
+
+<p>
+The definitions of the trigonometric functions were written to illustrate that certain function pairs are reciprocals of each other. Since:
+</p>
+
+\begin{align}
+\sin \theta = \frac{y}{r}
+\end{align}
+
+<p>
+and 
+</p>
+
+\begin{align}
+\csc \theta = \frac{r}{y}
+\end{align}
+
+<p>
+Then:
+</p>
+
+\begin{align}
+\sin \theta = \frac{1}{\csc \theta}
+\end{align}
+
+<p>
+Therefore, the reciprocal identities are listed below:
+</p>
+
+\begin{align}
+\sin \theta = \frac{1}{\csc \theta}
+\end{align}
+
+\begin{align}
+\cos \theta = \frac{1}{\sec \theta}
+\end{align}
+
+\begin{align}
+\tan \theta = \frac{1}{\cot \theta}
+\end{align}
+
+\begin{align}
+\csc \theta = \frac{1}{\sin \theta}
+\end{align}
+
+\begin{align}
+\sec \theta = \frac{1}{\cos \theta}
+\end{align}
+
+\begin{align}
+\cot \theta = \frac{1}{\tan \theta}
+\end{align}
+
+<div id="Trigonometric Functions and Fundamental Identities-Signs and Ranges of Function Values"><h2 id="Signs and Ranges of Function Values" class="header"><a href="#Trigonometric Functions and Fundamental Identities-Signs and Ranges of Function Values">Signs and Ranges of Function Values</a></h2></div>
+
+<p>
+A point \((x, y)\) in quadrant II has \(x &lt; 0\) and \(y &gt; 0\). This makes the values of sine and cosecant positive for quadrant II angles, while the other four functions take on negative values. Similar results can be obtained for the other quadrants, as summarized here.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/trigonometric_functions_ranges.png" alt="Trignonometric Functions Ranges" style="height:250px">
+In Figure 37 we can see that as the measure of the angle increases, \(y\) increases, but never exceeds \(r\), so \(y \leq r\). In a similar way, angles in quadrant IV suggest that \(-r \leq y\). Therefore:
+</p>
+
+\begin{align}
+-r \leq y \leq r
+\end{align}
+
+\begin{align}
+-1 \leq \frac{y}{r} \leq 1
+\end{align}
+
+\begin{align}
+-1 \leq \sin \theta \leq 1
+\end{align}
+
+<p>
+Similar reasoning leads to the following:
+</p>
+
+\begin{align}
+-1 \leq \cos \theta \leq 1
+\end{align}
+
+<p>
+The tangent of an angle is defined as \(\frac{y}{x}\). It is possible that \(x &lt; y\), \(x = y\), or \(x &gt; y\). For this reason, \(\frac{y}{x}\) can take any value, so \(\tan \theta\) can be any real number, as can \(\cot \theta\).
+</p>
+
+<p>
+The functions \(\sec \theta\) and \(\csc \theta\) are reciprocals of the functions \(\cos \theta\) and \(\sin \theta\), respectively, making the following true:
+</p>
+
+\begin{align}
+\sec \theta \leq -1 \text{ or } \sec \theta \geq -1
+\end{align}
+
+<p>
+ and
+</p>
+
+\begin{align}
+\csc \theta \leq -1 \text{ or } \csc \theta \geq -1
+\end{align}
+
+<div id="Trigonometric Functions and Fundamental Identities-Pythagorean Identities"><h2 id="Pythagorean Identities" class="header"><a href="#Trigonometric Functions and Fundamental Identities-Pythagorean Identities">Pythagorean Identities</a></h2></div>
+
+<p>
+Given \(x^2 + y^2 = r^2\), then:
+</p>
+
+\begin{align}
+\frac{x^2}{r^2} + \frac{y^2}{r^2} = \frac{r^2}{r^2}
+\end{align}
+
+\begin{align}
+\left(\frac{x}{r}\right)^2 + \left(\frac{y}{r}\right)^2 = 1
+\end{align}
+
+\begin{align}
+\left(\cos \theta\right)^2 + \left(\sin \theta\right)^2 = 1
+\end{align}
+
+<p>
+Similarly:
+</p>
+
+\begin{align}
+\frac{x^2}{x^2} + \frac{y^2}{x^2} = \frac{r^2}{x^2}
+\end{align}
+
+\begin{align}
+1 + \left(\frac{y}{x}\right)^2 = \left(\frac{r}{x}\right)^2
+\end{align}
+
+\begin{align}
+1 + \left(\tan \theta\right)^2 = \left(\sec \theta\right)^2
+\end{align}
+
+<p>
+Similarly:
+</p>
+
+\begin{align}
+\frac{x^2}{y^2} + \frac{y^2}{y^2} = \frac{r^2}{y^2}
+\end{align}
+
+\begin{align}
+\left(\frac{x}{y}\right)^2 + 1 = \left(\frac{r}{y}\right)^2
+\end{align}
+
+\begin{align}
+\left(\cot \theta\right)^2 + 1 = \left(\csc \theta \right)^2
+\end{align}
+
+<div id="Trigonometric Functions and Fundamental Identities-Quotient Identities"><h2 id="Quotient Identities" class="header"><a href="#Trigonometric Functions and Fundamental Identities-Quotient Identities">Quotient Identities</a></h2></div>
+
+<p>
+Consider the quotient of \(\sin \theta\) and \(\cos \theta\):
+</p>
+
+\begin{align}
+\frac{\sin \theta}{\cos \theta} = \frac{\frac{y}{r}}{\frac{x}{r}} = \frac{y}{x} = \tan \theta
+\end{align}
+
+<p>
+where \(\cos \theta \neq 0\). Similarly:
+</p>
+
+\begin{align}
+\frac{\cos \theta}{\sin \theta} = \frac{\frac{x}{r}}{\frac{y}{r}} = \frac{x}{y} = \cot \theta
+\end{align}
 </div>
   
 
