[AGAA] 8.2: add missing image [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_02.html
@@ -179,6 +179,13 @@ A point \((x, y)\) in quadrant II has \(x &lt; 0\) and \(y &gt; 0\). This makes 
 
 <p>
 <img src="https://albamr09.github.io/public/assets/trigonometric_functions_ranges.png" alt="Trignonometric Functions Ranges" style="height:250px">
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/trigonometric_identities.png" alt="Trignonometric Identities" style="height:550px">
+</p>
+
+<p>
 In Figure 37 we can see that as the measure of the angle increases, \(y\) increases, but never exceeds \(r\), so \(y \leq r\). In a similar way, angles in quadrant IV suggest that \(-r \leq y\). Therefore:
 </p>
 
