[AGAA] 08.03: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/index.html
@@ -110,6 +110,9 @@ Trigonometric Functions and Applications.
 </li><li>
 <a href="08_02.html">Trigonometric Functions and Fundamental Identities</a>
 
+</li><li>
+<a href="08_03.html">Right Triangles and Evaluating Trigonometric Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
