--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_03.html
@@ -73,7 +73,7 @@ Such that:
 \end{align}
 
 \begin{align}
-\cot A = \frac{x}{y} = \frac{\text{side adjacent}{\text{side opposite}}}
+\cot A = \frac{x}{y} = \frac{\text{side adjacent}}{\text{side opposite}}
 \end{align}
 
 <div id="Right Triangles and Evaluating Trigonometric Functions-Trigonometric Function Values of Special Angles"><h2 id="Trigonometric Function Values of Special Angles" class="header"><a href="#Right Triangles and Evaluating Trigonometric Functions-Trigonometric Function Values of Special Angles">Trigonometric Function Values of Special Angles</a></h2></div>
@@ -139,7 +139,7 @@ Therefore the hypotenuse is \(2\), the side opposite is \(1\) and the side adjac
 \end{align}
 
 \begin{align}
-\cot 30º = \frac{\text{side adjacent}{\text{side opposite}}} = \frac{\sqrt{3}}{1} = \sqrt{3}
+\cot 30º = \frac{\text{side adjacent}}{\text{side opposite}} = \frac{\sqrt{3}}{1} = \sqrt{3}
 \end{align}
 
 <p>
@@ -175,7 +175,7 @@ Therefore from the definition of the trigonometric functions:
 \end{align}
 
 \begin{align}
-\cot 60º = \frac{\text{side adjacent}{\text{side opposite}}} = \frac{\sqrt{3}}{3}
+\cot 60º = \frac{\text{side adjacent}}{\text{side opposite}} = \frac{\sqrt{3}}{3}
 \end{align}
 
 
@@ -225,7 +225,7 @@ from the definition of the trigonometric functions:
 \end{align}
 
 \begin{align}
-\cot 45º = \frac{\text{side adjacent}{\text{side opposite}}} = \frac{1}{1} = 1
+\cot 45º = \frac{\text{side adjacent}}{\text{side opposite}} = \frac{1}{1} = 1
 \end{align}
 
 <div id="Right Triangles and Evaluating Trigonometric Functions-Cofunction Identities"><h2 id="Cofunction Identities" class="header"><a href="#Right Triangles and Evaluating Trigonometric Functions-Cofunction Identities">Cofunction Identities</a></h2></div>
@@ -295,27 +295,27 @@ Given an acute angle \(A\) is radians:
 </p>
 
 \begin{align}
-\sin A = \cos B = \cos (\frac{\pi}{2} - A)
+\sin A = \cos B = \cos \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 \begin{align}
-\cos A = \sin B = \sin (\frac{\pi}{2} - A)
+\cos A = \sin B = \sin \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 \begin{align}
-\tan A = \cot B = \cot (\frac{\pi}{2} - A)
+\tan A = \cot B = \cot \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 \begin{align}
-\csc A = \sec B = \sec (\frac{\pi}{2} - A)
+\csc A = \sec B = \sec \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 \begin{align}
-\sec A = \csc B = \csc (\frac{\pi}{2} - A)
+\sec A = \csc B = \csc \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 \begin{align}
-\cot A = \tan B = \tan (\frac{\pi}{2} - A)
+\cot A = \tan B = \tan \left(\frac{\pi}{2} - A\right)
 \end{align}
 
 <div id="Right Triangles and Evaluating Trigonometric Functions-Reference Angles"><h2 id="Reference Angles" class="header"><a href="#Right Triangles and Evaluating Trigonometric Functions-Reference Angles">Reference Angles</a></h2></div>
