[AGAA] 08_03: fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAAT/08_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/08_03.html
@@ -239,7 +239,7 @@ In a right triangle \(ABC\) with right angle \(C\), the acute angles \(A\) and \
 </p>
 
 <p>
-The length of the side opposite angle \(A\) is \(a\), and the length of the side opposite angle \(B\) is \(b\). The length of the hypotenuse is \(c\). In this triangle, \(\sin A = \frac{a}{c}\) and \(cos B\) is also equal to \(\frac{a}{c}\).
+The length of the side opposite angle \(A\) is \(a\), and the length of the side opposite angle \(B\) is \(b\). The length of the hypotenuse is \(c\). In this triangle, \(\sin A = \frac{a}{c}\) and \(\cos B\) is also equal to \(\frac{a}{c}\).
 </p>
 
 <p>
